otto.log

✓ otto_for_claude.txt berhasil dibuat
  → /data/asd/otto-ai/otto_for_claude.txt
  → Lampirkan ke chat baru untuk lanjut
01:00 [Tree] Snapshot diperbarui.
ERROR: Repository not found.
fatal: Tidak dapat membaca dari repositori remote.

Mohon pastikan Anda punya hak akses yang benar dan repositori ada.
01:00 [Git] Push GAGAL — cek koneksi atau SSH key.
01:05 [Syntax] Semua file Python OK.

✓ otto_for_claude.txt berhasil dibuat
  → /data/asd/otto-ai/otto_for_claude.txt
  → Lampirkan ke chat baru untuk lanjut
01:05 [Tree] Snapshot diperbarui.
ERROR: Repository not found.
fatal: Tidak dapat membaca dari repositori remote.

Mohon pastikan Anda punya hak akses yang benar dan repositori ada.
01:05 [Git] Push GAGAL:
ERROR: Repository not found.
fatal: Tidak dapat membaca dari repositori remote.

Mohon pastikan Anda punya hak akses yang benar dan repositori ada.
01:10 [Syntax] Semua file Python OK.

✓ otto_for_claude.txt berhasil dibuat
  → /data/asd/otto-ai/otto_for_claude.txt
  → Lampirkan ke chat baru untuk lanjut
01:10 [Tree] Snapshot diperbarui.
To github.com:moroxixi/otto-ai.git
   44cbc6a..c840c6d  main -> main
01:10 [Git] Push berhasil: auto: 2026-05-30 01:10
08:42 [Syntax] Semua file Python OK.

✓ otto_for_claude.txt berhasil dibuat
  → /data/asd/otto-ai/otto_for_claude.txt
  → Lampirkan ke chat baru untuk lanjut
08:42 [Tree] Snapshot diperbarui.
To github.com:moroxixi/otto-ai.git
   c840c6d..736ae0c  main -> main
08:42 [Git] Push berhasil: auto: 2026-05-30 08:42
10:52 [Syntax] Semua file Python OK.

✓ otto_for_claude.txt berhasil dibuat
  → /data/asd/otto-ai/otto_for_claude.txt
  → Lampirkan ke chat baru untuk lanjut
10:52 [Tree] Snapshot diperbarui.
To github.com:moroxixi/otto-ai.git
   736ae0c..706924c  main -> main
10:52 [Git] Push berhasil: auto: 2026-05-30 10:52
14:00 [Syntax] Semua file Python OK.

✓ otto_for_claude.txt berhasil dibuat
  → /data/asd/otto-ai/otto_for_claude.txt
  → Lampirkan ke chat baru untuk lanjut
14:00 [Tree] Snapshot diperbarui.
To github.com:moroxixi/otto-ai.git
   706924c..e163ffb  main -> main
14:00 [Git] Push berhasil: auto: 2026-05-30 14:00
14:04 [Syntax] Semua file Python OK.

✓ otto_for_claude.txt berhasil dibuat
  → /data/asd/otto-ai/otto_for_claude.txt
  → Lampirkan ke chat baru untuk lanjut
14:04 [Tree] Snapshot diperbarui.
To github.com:moroxixi/otto-ai.git
   e163ffb..1c813e2  main -> main
14:04 [Git] Push berhasil: auto: 2026-05-30 14:04
18:42 [Syntax] ERROR ditemukan:
/data/asd/otto-ai/server/app.py: Sorry: IndentationError: expected an indented block after 'if' statement on line 318 (app.py, line 319)
/data/asd/otto-ai/intelligence/curiosity.py: Sorry: IndentationError: unindent does not match any outer indentation level (curiosity.py, line 164)

18:44 [Syntax] ERROR ditemukan:
/data/asd/otto-ai/intelligence/curiosity.py: Sorry: IndentationError: unindent does not match any outer indentation level (curiosity.py, line 164)

18:46 [Syntax] ERROR ditemukan:
/data/asd/otto-ai/intelligence/curiosity.py:   File "/data/asd/otto-ai/intelligence/curiosity.py", line 164
    Di handle_response(), setelah verdict == "confirmed":
       ^^^^^^^^^^^^^^^
SyntaxError: invalid syntax

18:49 [Syntax] Semua file Python OK.

✓ otto_for_claude.txt berhasil dibuat
  → /data/asd/otto-ai/otto_for_claude.txt
  → Lampirkan ke chat baru untuk lanjut
18:49 [Tree] Snapshot diperbarui.
To github.com:moroxixi/otto-ai.git
   1c813e2..d3d7c03  main -> main
18:50 [Git] Push berhasil: auto: 2026-05-30 18:49
22:04 [Syntax] ERROR ditemukan:
/data/asd/otto-ai/intelligence/curiosity.py: Sorry: IndentationError: unindent does not match any outer indentation level (curiosity.py, line 166)

22:06 [Syntax] Semua file Python OK.

✓ otto_for_claude.txt berhasil dibuat
  → /data/asd/otto-ai/otto_for_claude.txt
  → Lampirkan ke chat baru untuk lanjut
22:06 [Tree] Snapshot diperbarui.
To github.com:moroxixi/otto-ai.git
   d3d7c03..90ac6e7  main -> main
22:06 [Git] Push berhasil: auto: 2026-05-30 22:06
00:47 [Syntax] Semua file Python OK.

✓ otto_for_claude.txt berhasil dibuat
  → /data/asd/otto-ai/otto_for_claude.txt
  → Lampirkan ke chat baru untuk lanjut
00:47 [Tree] Snapshot diperbarui.
To github.com:moroxixi/otto-ai.git
   90ac6e7..b679a2b  main -> main
00:47 [Git] Push berhasil: auto: 2026-05-31 00:47
01:21 [Syntax] Semua file Python OK.

✓ otto_for_claude.txt berhasil dibuat
  → /data/asd/otto-ai/otto_for_claude.txt
  → Lampirkan ke chat baru untuk lanjut
01:21 [Tree] Snapshot diperbarui.
To github.com:moroxixi/otto-ai.git
   b679a2b..e00421c  main -> main
01:21 [Git] Push berhasil: auto: 2026-05-31 01:21
02:17 [Syntax] Semua file Python OK.

✓ otto_for_claude.txt berhasil dibuat
  → /data/asd/otto-ai/otto_for_claude.txt
  → Lampirkan ke chat baru untuk lanjut
02:17 [Tree] Snapshot diperbarui.
To github.com:moroxixi/otto-ai.git
   e00421c..a27d533  main -> main
02:17 [Git] Push berhasil: auto: 2026-05-31 02:17
11:09 [Syntax] Semua file Python OK.

✓ otto_for_claude.txt berhasil dibuat
  → /data/asd/otto-ai/otto_for_claude.txt
  → Lampirkan ke chat baru untuk lanjut
11:09 [Tree] Snapshot diperbarui.
To github.com:moroxixi/otto-ai.git
   a27d533..ecf9a7e  main -> main
11:09 [Git] Push berhasil: auto: 2026-05-31 11:09
12:47 [Syntax] Semua file Python OK.

✓ otto_for_claude.txt berhasil dibuat
  → /data/asd/otto-ai/otto_for_claude.txt
  → Lampirkan ke chat baru untuk lanjut
12:47 [Tree] Snapshot diperbarui.
To github.com:moroxixi/otto-ai.git
   ecf9a7e..e3b26ee  main -> main
12:47 [Git] Push berhasil: auto: 2026-05-31 12:47
13:00 [Syntax] Semua file Python OK.

✓ otto_for_claude.txt berhasil dibuat
  → /data/asd/otto-ai/otto_for_claude.txt
  → Lampirkan ke chat baru untuk lanjut
13:00 [Tree] Snapshot diperbarui.
To github.com:moroxixi/otto-ai.git
   e3b26ee..3e6fb0a  main -> main
13:00 [Git] Push berhasil: auto: 2026-05-31 13:00
13:20 [Syntax] Semua file Python OK.

✓ otto_for_claude.txt berhasil dibuat
  → /data/asd/otto-ai/otto_for_claude.txt
  → Lampirkan ke chat baru untuk lanjut
13:20 [Tree] Snapshot diperbarui.
To github.com:moroxixi/otto-ai.git
   3e6fb0a..c5555d0  main -> main
13:20 [Git] Push berhasil: auto: 2026-05-31 13:20
13:28 [Syntax] Semua file Python OK.

✓ otto_for_claude.txt berhasil dibuat
  → /data/asd/otto-ai/otto_for_claude.txt
  → Lampirkan ke chat baru untuk lanjut
13:28 [Tree] Snapshot diperbarui.
To github.com:moroxixi/otto-ai.git
   c5555d0..9650d0d  main -> main
13:28 [Git] Push berhasil: auto: 2026-05-31 13:28
13:48 [Syntax] Semua file Python OK.

✓ otto_for_claude.txt berhasil dibuat
  → /data/asd/otto-ai/otto_for_claude.txt
  → Lampirkan ke chat baru untuk lanjut
13:48 [Tree] Snapshot diperbarui.
To github.com:moroxixi/otto-ai.git
   9650d0d..50b04d5  main -> main
13:48 [Git] Push berhasil: auto: 2026-05-31 13:48
13:48 [Syntax] Semua file Python OK.

✓ otto_for_claude.txt berhasil dibuat
  → /data/asd/otto-ai/otto_for_claude.txt
  → Lampirkan ke chat baru untuk lanjut
13:48 [Tree] Snapshot diperbarui.
To github.com:moroxixi/otto-ai.git
   50b04d5..a5b2b28  main -> main
13:48 [Git] Push berhasil: auto: 2026-05-31 13:48
15:56 [Syntax] Semua file Python OK.

✓ otto_for_claude.txt berhasil dibuat
  → /data/asd/otto-ai/otto_for_claude.txt
  → Lampirkan ke chat baru untuk lanjut
15:56 [Tree] Snapshot diperbarui.
To github.com:moroxixi/otto-ai.git
   a5b2b28..ab47b14  main -> main
15:56 [Git] Push berhasil: auto: 2026-05-31 15:56
00:14 [Syntax] Semua file Python OK.

✓ otto_for_claude.txt berhasil dibuat
  → /data/asd/otto-ai/otto_for_claude.txt
  → Lampirkan ke chat baru untuk lanjut
00:14 [Tree] Snapshot diperbarui.
To github.com:moroxixi/otto-ai.git
   ab47b14..93f76ec  main -> main
00:14 [Git] Push berhasil: auto: 2026-06-01 00:14
08:12 [Syntax] Semua file Python OK.

✓ otto_for_claude.txt berhasil dibuat
  → /data/asd/otto-ai/otto_for_claude.txt
  → Lampirkan ke chat baru untuk lanjut
08:12 [Tree] Snapshot diperbarui.
